--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="header">
       <img src="./avatar.png" alt="avatar" class="header__avatar" />
       <div class="header__textContainer">
-        <h1 class="header__title">Юлия Шакирзянова</h1>
-        <h3 class="header__subtitle">Лучший QA всея Руси</h3>
+        <h1 class="header__title">Юля Пуля</h1>
+        <h3 class="header__subtitle">Разработчик</h3>
       </div>
     </header>
     <main>
